--- a/红外对射模块寻迹小车/Objects/Project.build_log.htm
+++ b/红外对射模块寻迹小车/Objects/Project.build_log.htm
@@ -17,12 +17,12 @@ Library Manager: ArmAr.exe V5.06 update 5 (build 528)
 Hex Converter:   FromElf.exe V5.06 update 5 (build 528)
 CPU DLL:         SARMCM3.DLL V5.24.1
 Dialog DLL:      DCM.DLL V1.16.0.0
-Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.1.0
+Target DLL:      CMSIS_AGDI.dll V1.28.3.0
 Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
-C:\Users\lenovo\Desktop\stm32 project\调试 第二轮\Project.uvprojx
-Project File Date:  11/08/2025
+C:\Users\lenovo\secondround\红外对射模块寻迹小车\Project.uvprojx
+Project File Date:  11/20/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\stm32\ARM\ARMCC\Bin'
@@ -30,10 +30,12 @@ Build target 'Target 1'
 compiling main.c...
 .\Hardware\Encoder.h(9): warning:  #1-D: last line of file ends without a newline
   #endif
-User\main.c: 1 warning, 0 errors
+.\Hardware\sensor.h(10): warning:  #1-D: last line of file ends without a newline
+  #endif
+User\main.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=6748 RO-data=1788 RW-data=68 ZI-data=1060  
-".\Objects\Project.axf" - 0 Error(s), 1 Warning(s).
+Program Size: Code=3204 RO-data=1788 RW-data=48 ZI-data=1056  
+".\Objects\Project.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
