--- a/红外对射模块寻迹小车/Objects/Project.build_log.htm
+++ b/红外对射模块寻迹小车/Objects/Project.build_log.htm
@@ -17,7 +17,7 @@ Library Manager: ArmAr.exe V5.06 update 5 (build 528)
 Hex Converter:   FromElf.exe V5.06 update 5 (build 528)
 CPU DLL:         SARMCM3.DLL V5.24.1
 Dialog DLL:      DCM.DLL V1.16.0.0
-Target DLL:      CMSIS_AGDI.dll V1.28.3.0
+Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.1.0
 Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
@@ -26,62 +26,8 @@ Project File Date:  11/20/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\stm32\ARM\ARMCC\Bin'
-Rebuild target 'Target 1'
-assembling startup_stm32f10x_md.s...
-compiling core_cm3.c...
-compiling misc.c...
-compiling system_stm32f10x.c...
-compiling stm32f10x_pwr.c...
-compiling stm32f10x_i2c.c...
-compiling stm32f10x_dac.c...
-compiling stm32f10x_iwdg.c...
-compiling stm32f10x_exti.c...
-compiling stm32f10x_rtc.c...
-compiling stm32f10x_cec.c...
-compiling stm32f10x_flash.c...
-compiling stm32f10x_can.c...
-compiling stm32f10x_gpio.c...
-compiling stm32f10x_dbgmcu.c...
-compiling stm32f10x_crc.c...
-compiling stm32f10x_bkp.c...
-compiling stm32f10x_spi.c...
-compiling stm32f10x_dma.c...
-compiling stm32f10x_fsmc.c...
-compiling Delay.c...
-compiling stm32f10x_sdio.c...
-compiling stm32f10x_rcc.c...
-compiling stm32f10x_wwdg.c...
-compiling stm32f10x_usart.c...
-compiling stm32f10x_adc.c...
-compiling pid.c...
-System\pid.c(5): warning:  #550-D: parameter "kp"  was set but never used
-  void PID_Init(PIDController* pid, float kp, float ki, float kd)
-System\pid.c(5): warning:  #550-D: parameter "ki"  was set but never used
-  void PID_Init(PIDController* pid, float kp, float ki, float kd)
-System\pid.c(5): warning:  #550-D: parameter "kd"  was set but never used
-  void PID_Init(PIDController* pid, float kp, float ki, float kd)
-System\pid.c: 3 warnings, 0 errors
-compiling vofa.c...
-compiling stm32f10x_tim.c...
-compiling Key.c...
-compiling OLED.c...
-compiling LED.c...
-compiling Serial.c...
-compiling encoder.c...
-compiling timer.c...
-compiling motor.c...
-compiling PWM.c...
-compiling sensor.c...
-compiling main.c...
-.\Hardware\Encoder.h(9): warning:  #1-D: last line of file ends without a newline
-  #endif
-.\Hardware\sensor.h(10): warning:  #1-D: last line of file ends without a newline
-  #endif
-User\main.c: 2 warnings, 0 errors
-compiling stm32f10x_it.c...
-linking...
-Program Size: Code=1600 RO-data=268 RW-data=4 ZI-data=1028  
-".\Objects\Project.axf" - 0 Error(s), 5 Warning(s).
+Build target 'Target 1'
+".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -95,7 +41,7 @@ Package Vendor: Keil
   D:\stm32\ARM\PACK\Keil\STM32F1xx_DFP\2.2.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
