--- a/红外对射模块寻迹小车/Objects/Project.build_log.htm
+++ b/红外对射模块寻迹小车/Objects/Project.build_log.htm
@@ -27,6 +27,9 @@ Project File Date:  11/20/2025
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\stm32\ARM\ARMCC\Bin'
 Build target 'Target 1'
+compiling sensor.c...
+linking...
+Program Size: Code=6036 RO-data=1788 RW-data=108 ZI-data=1028  
 ".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
